# radioshaq

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  mkdocs.yml  push.md
.githooks/: pre-push
.github/: .readthedocs.yaml  CONTRIBUTING.md  FUNDING.yml  LICENSE.md  PYPI_README.md  README.md  mkdocs.yml
.github/workflows/: build-docs.yml  enforce-main-source.yml  publish-nightly.yml  publish-pypi.yml  release-major.yml  release-minor.yml  release-patch.yml  test-ci.yml  validate-version-sync.yml
ancient-docs/: DOCUMENTATION_SITE_PLAN.md
ancient-docs/docs/: AUDIO_TX_PLAN.md  CLOUD_RADIO_DEPLOYMENT.md  HACKRF_IMPLEMENTATION_PLAN.md  HARDWARE_CONNECTION.md  IMPLEMENTATION_PLAN_AUDIO_LOOP.md  MIGRATION.md  MIGRATION_random.md  NANOBOT_WIRING_IMPLEMENTATION_PLAN.md  PER_MESSAGE_ACTIVATION_PLAN.md  PLAN-callsign-registration-audio-routes.md  PLAN-orchestrator-unified-react.md  PLAN-orchestrator-whitelist-quarterback.md  RADIOSHAQ_REBRAND_AND_README_PLAN.md  REPORT-interface-dashboard-and-client.md  SHAKODS_MATERIALS_FRANCE.md  SHAKODS_PLAN.md  api.md  audio.md  database.md  deployment.md  install.md  mistral-api.md  whitelist-and-audio-messages-investigation.md
docs/: PR-DESCRIPTION.md  api-reference.md  compliance-regulatory.md  configuration.md  index.md  interactive-setup-plan.md  internationalization.md  monitoring.md  plan-gemini-api-support.md  quick-start.md  radio-usage.md  requirements.txt  response-compliance-and-monitoring.md
docs/api/: .gitkeep  openapi.json
docs/legacy/: index.md
docs/plans/: huggingface-inference-providers-llm.md  tts-asr-provider-plugin-and-deploy.md
docs/reference/: .env.example  config.example.yaml
docs/snippets/: install-sync.sh  launch-docker.sh  launch-pm2.sh  migrate-up.sh  postgres-up.sh
radioshaq/: .env.example  INTERFACE_DATAFLOW_PLAN.md  PR_DESCRIPTION.md  README.md  alembic.ini  config.example.yaml  ecosystem.config.js  pyproject.toml
radioshaq/alembic/: README  env.py  script.py.mako
radioshaq/docs/: demo-env-profiles.md
radioshaq/examples/: README.md  config_sample.yaml
radioshaq/loguru/: __init__.py
radioshaq/prompts/: __init__.py
radioshaq/radioshaq/: __init__.py  __main__.py  cli.py  constants.py  license_acceptance.py  messaging_compliance.py  setup.py
radioshaq/scripts/: bump_version.py  check_version_sync.py  deploy_receiver.sh  export_openapi.py  hindsight-explore.ps1  hindsight-explore.sh  install.ps1  retention.py  run_e2e_no_radio.ps1  run_e2e_no_radio.sh  (+2 more)
radioshaq/tests/: __init__.py  (+1 more)
remote_receiver/: README.md  pyproject.toml
remote_receiver/receiver/: __init__.py  auth.py  hq_client.py  radio_interface.py  server.py  signal_processor.py
remote_receiver/receiver/backends/: __init__.py  base.py  hackrf_backend.py  rtlsdr_backend.py
remote_receiver/scripts/: deploy_receiver.sh
remote_receiver/tests/: test_backends.py
shakods/: IMPLEMENTATION_PLAN_AUDIO_LOOP_IMPROVED.md  README.md  alembic.ini  ecosystem.config.js  pyproject.toml
shakods/alembic/: README  env.py
shakods/docs/: auth.md  database.md  demo-two-local-one-remote.md
shakods/examples/: README.md  config_sample.yaml
shakods/infrastructure/aws/cloudformation/: api_gateway.yaml  base.yaml  database.yaml  lambda.yaml
shakods/infrastructure/aws/iam/: policies.json
shakods/infrastructure/aws/lambda/: api_handler.py  message_handler.py
shakods/infrastructure/aws/scripts/: build_layers.sh  deploy.sh  deploy_lambda.sh  teardown.sh
shakods/infrastructure/aws/stepfunctions/: react_orchestrator.asl.json
shakods/infrastructure/local/: alembic.ini  docker-compose.yml  ecosystem.config.js  setup.ps1
shakods/infrastructure/local/alembic/: env.py
shakods/infrastructure/local/postgres/init/: 01-env.sh
shakods/prompts/judges/: subtask_quality.md
shakods/prompts/orchestrator/: __init__.py  react_system.md
shakods/prompts/orchestrator/phases/: evaluation.md  reasoning.md
shakods/prompts/specialized/: __init__.py  radio_rx.md
shakods/scripts/: install.ps1  run_e2e_no_radio.ps1  run_e2e_no_radio.sh  run_integration_tests_with_pm2.ps1  run_integration_tests_with_pm2.sh
shakods/scripts/demo/: README.md  inject_audio.py  run_demo.py
shakods/shakods/: __init__.py  __main__.py
shakods/shakods/api/: server.py
shakods/shakods/api/dependencies/: __init__.py
shakods/shakods/api/routes/: audio.py  auth.py  bus.py  health.py  inject.py  messages.py  radio.py  relay.py  transcripts.py
shakods/shakods/audio/: __init__.py  asr.py  capture.py  playback.py  stream_processor.py  tts.py
shakods/shakods/auth/: __init__.py  field_auth.py  jwt.py  oauth_mistral.py
shakods/shakods/config/: __init__.py  schema.py
shakods/shakods/database/: __init__.py  dynamodb.py  models.py  postgres_gis.py  transcripts.py
shakods/shakods/llm/: __init__.py  client.py
shakods/shakods/middleware/: __init__.py  upstream.py
shakods/shakods/modes/: __init__.py  hq.py
shakods/shakods/orchestrator/: __init__.py  bridge.py  factory.py  judge.py  react_loop.py  registry.py
shakods/shakods/radio/: __init__.py  compliance.py  digital_modes.py  injection.py  ptt_coordinator.py  rig_manager.py  sdr_tx.py
shakods/shakods/scripts/: __init__.py  alembic_runner.py
shakods/shakods/specialized/: __init__.py  base.py  gis_agent.py  propagation_agent.py  radio_rx.py  radio_rx_audio.py  radio_tools.py  radio_tx.py  scheduler_agent.py  sms_agent.py  whatsapp_agent.py
shakods/tests/: __init__.py  conftest.py
shakods/tests/integration/: test_react_field_hq.py
shakods/tests/unit/: test_api.py  test_compliance.py  test_orchestrator.py  test_radio.py
shakods/tests/unit/audio/: test_capture.py  test_stream_processor.py
shakods/tests/unit/specialized/: test_radio_rx_audio.py
shakods/web-interface/: README.md  package.json
shakods/web-interface/src/components/audio/: ConfirmationQueue.tsx  VADVisualizer.tsx
shakods/web-interface/src/features/audio/: AudioConfigPage.tsx
shakods/web-interface/src/services/: shakodsApi.ts
shakods/web-interface/src/types/: audio.ts
site/: 404.html  index.html  requirements.txt  sitemap.xml
(+337 files in other folders)
