[project]
name = "remote-receiver"
version = "0.1.0"
description = "SHAKODS remote receiver station - SDR, auth, HQ upload"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pyjwt",
    "httpx",
    "numpy",
    "loguru",
]
[project.optional-dependencies]
sdr = ["pyrtlsdr"]
hackrf = ["python-hackrf"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["receiver"]
