[project]
name = "shakods"
version = "0.1.0"
description = "Strategic Autonomous Ham Radio and Knowledge Operations Dispatch System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SHAKODS Contributors"}
]
keywords = ["ham-radio", "ai-agent", "orchestrator", "emergency-communications", "react-pattern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework (versions from uv.lock)
    "fastapi>=0.134",
    "uvicorn[standard]>=0.41",
    "websockets>=16",
    "python-multipart>=0.0.22",

    # Database
    "sqlalchemy[asyncio]>=2.0.47",
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",
    "geoalchemy2>=0.18",
    "alembic>=1.18",
    "boto3>=1.42",
    "botocore>=1.42",

    # Authentication
    "pyjwt>=2.11",
    "python-jose[cryptography]>=3.5",
    "passlib[bcrypt]>=1.7",
    "oauth-cli-kit>=0.1",

    # Ham radio
    "numpy>=2.4",
    "scipy>=1.17",

    # LLM/AI
    "mistralai>=1.12",
    "litellm>=1.81",
    "openai>=2.24",
    "anthropic>=0.84",

    # Utilities
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "python-dotenv>=1.2",
    "typer>=0.24",
    "loguru>=0.7",
    "httpx>=0.28",
    "aiohttp>=3.13",
    "aiosqlite>=0.22",
    "croniter>=6",
    "python-dateutil>=2.9",
    "pytz>=2025.2",
    "tenacity>=9.1",
    "orjson>=3.11",

    # WhatsApp/Twilio
    "python-telegram-bot>=22",
    "twilio>=9.10",

    # AWS (for Lambda)
    "aws-lambda-powertools>=3.24",
    "mangum>=0.21",

    # Development tools
    "rich>=14",
    "watchdog>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "pytest-mock>=3.15",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
    "ipython>=9",
    "ipdb>=0.13",
]

test = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "pytest-mock>=3.15",
    "factory-boy>=3.3",
    "faker>=40",
    "responses>=0.26",
    "respx>=0.22",
    "freezegun>=1.5",
]

radio = [
    # Optional ham radio dependencies (require system libraries)
    # "pyhamlib",  # Requires hamlib system library
    # "pyham-ax25",  # For packet radio
]

# ASR (shakods/voxtral-asr-en) + TTS (ElevenLabs)
audio = [
    "transformers>=4.54",
    "peft>=0.18",
    "accelerate>=1.0",
    "torch>=2.0",
    "mistral-common[audio]>=1.8.1",
]

# Voice TX: play audio to rig (sound device → rig line-in)
voice_tx = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
]

# Voice RX: audio capture + preprocessing + VAD + ASR
voice_rx = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "webrtcvad-wheels>=2.0.11",
    "numpy>=2.4",
    "noisereduce>=3.0",
    "webrtcvad>=2.0.10",
]

[project.scripts]
shakods = "shakods.cli:app"
alembic-upgrade = "shakods.scripts.alembic_runner:main_upgrade"
alembic-upgrade-sql = "shakods.scripts.alembic_runner:main_upgrade_sql"
alembic-current = "shakods.scripts.alembic_runner:main_current"

[project.urls]
Homepage = "https://github.com/shakods/shakods"
Documentation = "https://shakods.readthedocs.io"
Repository = "https://github.com/shakods/shakods"
Issues = "https://github.com/shakods/shakods/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shakods"]

[tool.hatch.build]
include = [
    "shakods/**/*.py",
    "prompts/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "D", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "live_api: Tests that require BASE_URL and a running API (e.g. PM2)",
    "radio: Tests requiring radio hardware",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["shakods"]
omit = ["*/tests/*", "*/vendor/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.shakods]
mode = "field"
station_id = "DEV-STATION"

[tool.shakods.database]
postgres_url = "postgresql+asyncpg://localhost:5432/shakods"
dynamodb_endpoint = ""

[tool.shakods.auth]
jwt_secret = "dev-secret-change-in-production"
jwt_expire_minutes = 30

[tool.shakods.pm2]
instances = 1
autorestart = true
watch = true
max_memory_restart = "1G"
